# spatial-reasoning-activation-patching

./: .gitignore  README.md  pyproject.toml  start_job.sh
dataset/: data.py
inference/: inference.py  inference_report.py  validation.py
patching/: confirmatory_patching_report.py  exploratory_patching_report.py  model_dissector.py  patching.py
